--- a/src/component/login.module.css
+++ b/src/component/login.module.css
@@ -10,7 +10,7 @@
   background: white;
   padding: 30px 20px;
   border-radius: 12px;
-  box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 9px 15px rgba(0, 0, 0, 0.1);
   width: 320px;
   display: flex;
   flex-direction: column;
@@ -26,7 +26,7 @@
   margin-bottom: 15px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  font-size: 16px;
+  font-size: 0.6em;
 }
 
 .loginForm button {
