User Card created details will be show on click card

--- a/src/pages/home.module.css
+++ b/src/pages/home.module.css
@@ -1,11 +1,15 @@
-#table{
+/* #table{
     width: 100vw;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
+    
+} */
 
-}
-
-#users{
+/* #users{
+    
     text-align: center;
+} */
+#userData{
+    
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
